--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,5 +4,10 @@
       "@/*": ["./src/*"]
     }
   },
+
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.vue"
+  ],
   "exclude": ["node_modules", "dist"]
 }
