--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lodash": "^4.17.21",
     "vue": "^3.4.21",
     "vue-router": "^4.3.2",
-    "vuex": "^4.1.0"
+    "pinia": "2.2.0"
   },
   "devDependencies": {
     "prettier": "3.2.5",
